Fix upnp closing connection

* call start() after HTTPRequest creation
* connect replyFinished to QNetworkReply::finished instead of QNetworkAccessManager::finished

BUG: 404135